test/core/errors/default_values_error/zs/wrong_decimal_initializer_error.zs
package wrong_decimal_initializer_error;

struct WrongDecimalInitializer
{
    int32   wrongDecimalInitializer = false;
};
